--- a/DeepZoom.TestApplication/MainWindow.xaml
+++ b/DeepZoom.TestApplication/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:dz="clr-namespace:DeepZoom.Controls;assembly=DeepZoom"
-        Title="Deep Zoom for WPF" Height="800" Width="1280">
+        Title="Deep Zoom for WPF test" Height="800" Width="1280">
     <Border Background="Black">
         <!-- 
         Some sample images:
